# The-Pai-Project

./: .gitignore  pyproject.toml  requirements.txt
api/: index.py
client/: README.md  pubspec.yaml
client/lib/: app.dart  config.dart  main.dart
client/lib/models/: chat_message.dart
client/lib/providers/: chat_provider.dart
client/lib/services/: api_service.dart  stt_service.dart  tts_service.dart  win_recorder.dart
client/lib/ui/screens/: chat_history_panel.dart  chat_screen.dart  settings_screen.dart
client/lib/ui/widgets/: message_bubble.dart  sidebar.dart  thinking_indicator.dart  voice_button.dart
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
config/: permissions.json  remote.json  tools.json
src/: config.py  main.py  tracing.py  types.py
src/domains/gym/: __init__.py  tools.py
src/domains/nutrition/: __init__.py  food_db.py  tools.py
src/domains/productivity/: __init__.py  tools.py
src/domains/system_control/: __init__.py  tools.py
src/execution/: desktop.py
src/memory/: chat_sessions.py  db.py  retrieval.py  vector_store.py
src/orchestrator/: chat.py  intent_parser.py  llm.py  orchestrator.py  router.py
src/remote/: __init__.py  api.py  auth.py  dashboard.py
src/safety/: audit.py  confirmation.py  permissions.py  rate_limiter.py
src/tools/: __init__.py  registry.py  validation.py
src/voice/: transcription.py  voice_input.py
